--- a/meetup/package.json
+++ b/meetup/package.json
@@ -32,5 +32,8 @@
     "lint-test": "eslint . && jest --no-cache ./* "
   },
   "license": "MIT",
-  "dependencies": {}
+  "dependencies": {
+    "date-fns": "^1.30.1",
+    "moment": "^2.24.0"
+  }
 }
